fixed contact svg on mobile (mask doesnt work)

--- a/app/webpack/components/social_box/social_box_item/social_box_item.scss
+++ b/app/webpack/components/social_box/social_box_item/social_box_item.scss
@@ -5,6 +5,5 @@
 	&__icon {
 		width: 50px;
 		height: 50px;
-		background-color: $primary-light;
 	}
 }
